# Participation-Manager

./: DatabaseAccessor.cpp  README.md  User.cpp  User.h  dbTest.cpp
source/: CMakeLists.txt  DatabaseAccessor.cpp  DatabaseAccessor.h  GetAllUsersRequest.cpp  GetAllUsersResult.cpp  GetUserRequest.cpp  GetUserResult.cpp  InputMonitor.cpp  LCD.cpp  LCD.h  QRScanner.cpp  QRScanner.h  Requester.cpp  Requester.h  UpdateUserRequest.cpp  UpdateUserResult.cpp  User.cpp  User.h  request.h  result.h
webServer/html/: homepage.css  homepage.css.save  index.html  index.php  login.php  updateDB.php  userDatabase.php
